Fixing footer on smaller screens.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -39,4 +39,7 @@ footer {
   height: fit-content;
   margin-top: 24px;
   text-shadow: 0 0 2px #000;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
